kubernetes/events-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: events-es-api-service
spec:
  selector:
    app: events-es-api
  ports:
  - name: events-es-api-port
    protocol: TCP
    port: 4001
    targetPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: events-es2vt-service
spec:
  selector:
    app: events-es2vt
  ports:
  - name: events-es2vt
    protocol: TCP
    port: 4001
    targetPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: events-graphql-api-service
  labels:
    app: events-graphql-api
spec:
  type: LoadBalancer
  selector:
    app: events-graphql-api
  ports:
  - name: events-service-port
    protocol: TCP
    port: 4000
    targetPort: 4000
