kubernetes/events-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: events-graphql-api-service
  labels:
    app: events-graphql-api-service
  annotations:
    external-dns.alpha.kubernetes.io/hostname: events.dev.ala.org.au
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-2:748909248546:certificate/969309c3-9c24-4fc8-9e16-10334e82bbd4
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: events-graphql-api-service
                port:
                  number: 443
